--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
     
     <div class="divider"></div>
     
-    <script src="/convert.js"></script>
+    <script src="convert.js"></script>
 </body>
 </html>
